# python-minimal-project

./: .flake8  .gitignore  CHANGELOG.md  Makefile  README.md  RELEASE_PROCESS.md  pyproject.toml  pytest-coverage.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml  coverage.yml  pr_checks.yml
project/: math.py
scripts/: Makefile  prepare_changelog.py  release.sh  release_notes.py  setup_project.py
template_project/: __init__.py  __main__.py  _logger.py  version.py
template_project/utils/: env_vars.py  log.py  package.py
tests/: test_math.py  test_project.py
tests/utils/: test_package.py
