[tool.poetry]
name = "template_project"
version = "0.1.0"
description = ""
authors = ["author_name <author_email>"]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-cov = "^3.0.0"
flake8 = "^5.0.1"
black = {version = "^22.6.0", allow-prereleases = true}
isort = "^5.10.1"
mypy = "^0.971"
coverage-badge = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
exclude = [
    "scripts"
]

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'pass',
]
