[tool.poetry]
name = "template_project"
version = "0.1.0"
description = ""
authors = ["author_name <author_email>"]

[tool.poetry.dependencies]
python = "^3.9"
structlog = "^22.1.0"
orjson = "^3.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-cov = "^3.0.0"
flake8 = "^5.0.4"
black = {version = "^22.8.0", allow-prereleases = true}
isort = "^5.10.1"
mypy = "^0.971"
coverage-badge = "^1.1.0"
pybadges = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
exclude = [
    "scripts"
]

[tool.coverage.report]
precision = 2
fail_under = 60
exclude_lines = [
    'pragma: no cover',
    'raise NotImplementedError',
    'raise NotImplemented',
    'if TYPE_CHECKING:',
    '@overload',
]
omit = [
    "./*/_logger.py",
]
skip_empty = true
skip_covered = true

[tool.black]
color = false
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
skip-string-normalization = true

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
color_output = false
